[metadata]
name = primes
version = attr: primes.version.__version__
url = https://github.com/pyrustic/primes
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Generation of primes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    desktop-application
    primes-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pyrustic

[options.entry_points]
console_scripts =
    primes = primes.__main__:main
